change permalink url rule

--- a/quiz.yml
+++ b/quiz.yml
@@ -25,7 +25,7 @@
     yes_point: 5
     no_point: 0
     practice: ふりかえり
-- category: collaborationg
+- category: collaborating
   title: 協力すること
   items:
   - question: プログラマは質問の答えを得ようとするのではなく、いつも見当をつけようとしていますか？
