--- a/quiz.yml
+++ b/quiz.yml
@@ -1,15 +1,15 @@
 - category: thinking
   title: 考えること
   items:
-  - question: プログラマはすべてのプロダクトコードを他のプログラマ（少なくとも1 名）にチェックしてもらっていますか？
+  - question: プログラマはすべてのプロダクトコードを他のプログラマ（少なくとも1名）にチェックしてもらっていますか？
     yes_point: 5
     no_point: 0
     practice: ペアプログラミング
-  - question: チームメンバー全員が、使うと合意したすべてのプラクティスを一貫して厳格によく考えて適用していますか？
+  - question: チームメンバー全員が、使うことを合意したすべてのプラクティスを一貫して厳格によく考えて適用していますか？
     yes_point: 75
     no_point: 0
     practice: ペアプログラミング、根本原因分析、ふりかえり
-  - question: チームメンバーは普段、仕事に集中して参加していますか？
+  - question: チームメンバーは普段、仕事に集中して取り組んでいますか？
     yes_point: 5
     no_point: 0
     practice: 活き活きとした仕事
@@ -28,7 +28,7 @@
 - category: collaborating
   title: 協力すること
   items:
-  - question: プログラマは質問の答えを得ようとするのではなく、いつも見当をつけようとしていますか？
+  - question: プログラマは疑問点の答えを確認しようとするのではなく、いつも自分たちの想定で進めてしまっていますか？
     yes_point: 0
     no_point: 75
     practice: XPチーム
@@ -95,7 +95,7 @@
     yes_point: 4
     no_point: 0
     practice: 10分ビルド
-  - question: プログラマのほぼ全員がコードに関して感性を共有していますか？
+  - question: プログラマのほぼ全員がコードに関して同じ感性を共有していますか？
     yes_point: 1
     no_point: 0
     practice: コーディング標準
@@ -130,7 +130,7 @@
     yes_point: 3
     no_point: 0
     practice: 計画ゲーム
-  - question: チームの計画のほぼ全項目が、顧客中心で、結果優先で、順番に依存しないようになっていますか？
+  - question: チームの計画のほぼ全項目が、顧客中心で、ゴールが明確で、順番に依存しないようになっていますか？
     yes_point: 4
     no_point: 0
     practice: ストーリー
@@ -181,11 +181,11 @@
     yes_point: 1
     no_point: 0
     practice: スパイクソリューション
-  - question: プログラマは最初にパフォーマンステストをせずにコードを最適化しますか？
+  - question: プログラマは最初にパフォーマンステストをせずにコードを最適化してしまっていますか？
     yes_point: 0
     no_point: 3
     practice: パフォーマンスの最適化
-  - question: 顧客の承認なしにプログラマは常にコードの最適化に1時間以上費やしていますか？
+  - question: これまでに顧客の承認も得ずにプログラマがコードの最適化に1時間以上費やしたことがありますか？
     yes_point: 0
     no_point: 3
     practice: パフォーマンスの最適化
@@ -202,8 +202,9 @@
     no_point: 1
     practice: 探索的テスト、イテレーションデモ、真の顧客の参加
 
+# 出典
 # 和書名: 『アート・オブ・アジャイルデベロップメント』
 # 版元名: オライリー・ジャパン
 # 著者名: Shore James, Warden Shane
-# 監訳、訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
+# 監訳・訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
 
